# etca-asm

./: Makefile  README.md  etc-as  etc-as.py  etca-as.py  gen_cpuid.py  mov_test.py  pyproject.toml  test.py
etca_asm/: base_isa.py  byte_operations.py  common_macros.py  core.py  instruction.lark  qword_operations.py
etca_asm/extensions/: __init__.py  byte_operations.py  dword_operations.py  qword_operations.py  stack_and_functions.py
src/etc_as/: __init__.py  __main__.py  base_isa.py  common_macros.py  core.py  instruction.lark  main.py
src/etc_as/extensions/: __init__.py  byte_operations.py  cache_instructions.py  dword_operations.py  dword_pointers.py  expanded_opcodes.py  mode_register.py  qword_operations.py  real32.py  real64.py  stack_and_functions.py
tests/golden/: Makefile  README.md  asm_loader_kernel.ann  asm_loader_kernel.s  golden_tester_generic.py  macros.ann  macros.s  neg_movs.ann  neg_movs.s  small_movs.ann  small_movs.s  store_load.ann  store_load.s  test_jumps.ann  test_jumps.s
